<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/expanded_controller_layout" android:background="@color/cast_expanded_controller_background_color" android:layout_width="-1" android:layout_height="-1">
    <ImageView android:id="@id/background_image_view" android:layout_width="-1" android:layout_height="-1" android:scaleType="6" android:contentDescription="@string/cast_expanded_controller_background_image" />
    <ImageView android:id="@id/blurred_background_image_view" android:visibility="2" android:layout_width="-1" android:layout_height="-1" android:scaleType="6" android:contentDescription="@string/cast_expanded_controller_background_image" />
    <RelativeLayout android:background="@drawable/cast_expanded_controller_bg_gradient_light" android:layout_width="-1" android:layout_height="-1">
        <android.support.v7.widget.Toolbar android:theme="?unknown_attr_ref: 7f010001" android:id="@id/toolbar" android:background="@drawable/cast_expanded_controller_actionbar_bg_gradient_light" android:layout_width="-1" android:layout_height="-2" android:minHeight="@dimen/cast_expanded_controller_control_toolbar_min_height" />
        <RelativeLayout android:layout_width="-1" android:layout_height="-1" android:layout_above="@id/controllers" android:layout_below="@id/toolbar">
            <ImageView android:id="@id/background_place_holder_image_view" android:layout_width="96dp" android:layout_height="96dp" android:src="@drawable/quantum_ic_art_track_grey600_48" android:scaleType="3" android:layout_centerInParent="true" android:contentDescription="@string/cast_expanded_controller_background_image" />
            <RelativeLayout android:id="@id/ad_container" android:visibility="2" android:layout_width="-1" android:layout_height="-2" android:layout_centerInParent="true">
                <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/cast_expanded_controller_text_color" android:id="@id/ad_label" android:background="@color/cast_expanded_controller_ad_label_background_color" android:layout_width="-2" android:layout_height="-2" android:text="@string/cast_ad_label" android:layout_centerHorizontal="true" />
                <RelativeLayout android:background="@color/cast_expanded_controller_ad_container_white_stripe_color" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="8dp" android:layout_below="@id/ad_label">
                    <View android:background="0x106000c" android:layout_width="@dimen/cast_expanded_controller_ad_background_layout_width" android:layout_height="@dimen/cast_expanded_controller_ad_background_layout_height" android:layout_centerHorizontal="true" />
                    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/cast_expanded_controller_text_color" android:gravity="11" android:id="@id/ad_in_progress_label" android:layout_width="@dimen/cast_expanded_controller_ad_layout_width" android:layout_height="@dimen/cast_expanded_controller_ad_layout_height" android:text="@string/cast_expanded_controller_ad_in_progress" android:layout_centerHorizontal="true" />
                    <ImageView android:id="@id/ad_image_view" android:visibility="2" android:layout_width="@dimen/cast_expanded_controller_ad_layout_width" android:layout_height="@dimen/cast_expanded_controller_ad_layout_height" android:src="@drawable/quantum_ic_bigtop_updates_white_24" android:scaleType="1" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:contentDescription="@string/cast_expanded_controller_ad_image_description" />
                    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/cast_expanded_controller_text_color" android:background="@drawable/cast_skip_ad_label_border" android:paddingLeft="15dp" android:paddingTop="4dp" android:paddingRight="15dp" android:paddingBottom="4dp" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="8dp" android:text="@string/cast_expanded_controller_skip_ad_label" android:layout_alignTop="@id/ad_in_progress_label" android:layout_alignRight="@id/ad_in_progress_label" />
                </RelativeLayout>
            </RelativeLayout>
            <ProgressBar android:id="@id/loading_indicator" android:visibility="2" android:layout_width="-2" android:layout_height="-2" android:layout_centerInParent="true" style="?unknown_attr_ref: 101007a" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/controllers" android:layout_width="-1" android:layout_height="-2" android:layout_margin="8dp" android:layout_alignParentBottom="true">
            <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="@color/cast_expanded_controller_text_color" android:ellipsize="3" android:gravity="1" android:id="@id/status_text" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar" android:maxLines="1" android:layout_alignParentTop="true" />
            <RelativeLayout android:id="@id/seek_bar_controls" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_below="@id/status_text">
                <TextView android:textColor="@color/cast_expanded_controller_progress_text_color" android:id="@id/start_text" android:layout_width="-2" android:layout_height="-2" android:text="@string/cast_invalid_stream_position_text" android:maxLines="1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <TextView android:textColor="@color/cast_expanded_controller_progress_text_color" android:id="@id/end_text" android:layout_width="-2" android:layout_height="-2" android:text="@string/cast_invalid_stream_duration_text" android:maxLines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true" />
                <ImageView android:id="@id/live_stream_indicator" android:visibility="1" android:layout_width="-2" android:layout_height="-2" android:src="@drawable/quantum_ic_bigtop_updates_white_24" android:layout_alignLeft="@id/end_text" android:layout_alignTop="@id/end_text" android:layout_alignRight="@id/end_text" android:layout_alignBottom="@id/end_text" android:layout_centerVertical="true" android:contentDescription="@string/cast_expanded_controller_live_stream_indicator" />
                <SeekBar android:disabledAlpha="1.0" android:id="@id/seek_bar" android:layout_width="-1" android:layout_height="-2" android:layout_toLeftOf="@id/end_text" android:layout_toRightOf="@id/start_text" android:layout_centerVertical="true" android:contentDescription="@string/cast_seek_bar" />
                <SeekBar android:id="@id/live_stream_seek_bar" android:visibility="1" android:layout_width="-1" android:layout_height="-2" android:layout_toLeftOf="@id/end_text" android:layout_toRightOf="@id/start_text" android:layout_alignLeft="@id/seek_bar" android:layout_alignTop="@id/seek_bar" android:layout_alignRight="@id/seek_bar" android:layout_alignBottom="@id/seek_bar" android:layout_centerVertical="true" android:contentDescription="@string/cast_seek_bar" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="@dimen/cast_expanded_controller_margin_between_seek_bar_and_control_buttons" android:layout_below="@id/seek_bar_controls">
                <ImageButton android:id="@id/button_0" android:padding="0dp" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="@dimen/cast_expanded_controller_control_button_margin" android:layout_toLeftOf="@id/button_1" android:layout_centerVertical="true" />
                <ImageButton android:id="@id/button_1" android:padding="0dp" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="@dimen/cast_expanded_controller_control_button_margin" android:layout_toLeftOf="@id/button_play_pause_toggle" android:layout_centerVertical="true" />
                <ImageButton android:id="@id/button_play_pause_toggle" android:padding="0dp" android:layout_width="64dp" android:layout_height="64dp" android:scaleType="3" android:layout_centerInParent="true" />
                <ImageButton android:id="@id/button_2" android:padding="0dp" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/cast_expanded_controller_control_button_margin" android:layout_toRightOf="@id/button_play_pause_toggle" android:layout_centerVertical="true" />
                <ImageButton android:id="@id/button_3" android:padding="0dp" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="@dimen/cast_expanded_controller_control_button_margin" android:layout_toRightOf="@id/button_2" android:layout_centerVertical="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
